<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="bottom"
        android:background="@color/background"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currentLocationButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/background"
            android:clickable="true"
            android:contentDescription="@string/bc_use_current_location"
            android:focusable="true"
            android:text="@string/bt_current_loc"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/foreground"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectLocationButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/background"
            android:clickable="true"
            android:contentDescription="@string/bc_use_selected_location"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/bt_select_loc"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/foreground"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="0dp"
            android:backgroundTint="@color/background"
            android:clickable="true"
            android:contentDescription="@string/bc_cancel_report"
            android:focusable="true"
            android:minWidth="20dp"
            android:text="X"
            android:textAlignment="center"
            android:textColor="@color/foreground"
            android:textSize="18sp" />


    </LinearLayout>
</LinearLayout>